<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meteor Job</string>
    <string name="close_app">Close app</string>
    <string name="dev_message">Created by Kirsten, 2018</string>

    <!-- Main menu -->
    <string name="logo_text">Работа в digital-агентстве \"Метеор\"</string>

    <!-- Default Strings -->
    <string name="default_yes">Да</string>
    <string name="default_no">Нет</string>
    <string name="default_loading">Загрузка…</string>
    <string name="default_ok">Oк</string>
    <string name="default_send">Отправить</string>
    <string name="default_send_review">Отправить резюме</string>
    <string name="default_send_on_email">Отправить резюме</string>
    <string name="default_download">Скачать</string>
    <string name="default_choose_file">Выберите файл</string>
    <string name="default_necessary_field">- поля, обязательные для заполнения</string>
    <string name="default_insert_file">Прикрепить файлы</string>
    <string name="default_accept_agreement">Нажимая кнопку Отправить, я принимаю условия Пользовательского соглашения</string>
    <string name="default_input_email">Email для отправки тестового задания:</string>

    <!-- URL's -->
    <string name="url_agreement">http://it-meteor.ru/privacy-policy.html</string>

    <!-- Errors -->
    <string name="error_retrofit_connection">Нет ответа от сервера</string>
    <string name="error_internet_connection">Нет соединения с сетью</string>
    <string name="error_email_application">Не обнаружен почтовый клиент</string>
    <string name="error_blog_tags_loading">Теги не загружены</string>
    <string name="error_reviews_loading">Отзывы не загружены</string>
    <string name="error_loading_file">Ошибка при загрузке файла</string>
    <string name="error_loading_data">Ошибка при загрузке данных</string>
    <string name="error_validation">Часть полей заполнена некорректно</string>
    <string name="error_validation_name">Некорректное имя</string>
    <string name="error_validation_phone">Некорректный телефон</string>
    <string name="error_validation_comment">Комментарий не должен быть пустым</string>
    <string name="error_email_send">Произошла ошибка во время отправки тестового задания.</string>
    <string name="error_validation_mail">Некорректный e - mail</string>
    <string name="error_validation_question">Это обязательное поле</string>
    <string name="error_file_format">Недопустимый формат файла: %s</string>
    <string name="error_multiply_files">Этот файл уже есть в списке</string>
    <string name="error_repeat_files">Этот файлы были выбраны ранее, поэтому не добавлены:%s</string>

    <!-- Complete -->
    <string name="success_data_send">Данные успешно отправлены!</string>

    <!-- ActionBar -->
    <string name="actionbar_title">Выберите специальность</string>
    <string name="actionbar_test">Выберите тест</string>
    <string name="actionbar_test_questions">Тест №%d на вакансию %s</string>

    <!-- Tests -->
    <string name="test_start">Пройти тест</string>
    <string name="test_question">Вопрос:</string>
    <string name="test_question_next">Далее</string>
    <string name="test_current_question_number">Вопрос №%d из %d</string>
    <string name="test_question_finish">Завершить тестирование</string>
    <string name="test_finish">Поздравляем с завершением теста!</string>
    <string name="test_finish_show_count">Количество правильных ответов:%d</string>

    <!-- Professions -->
    <string name="profession_dev">Разработчик</string>
    <string name="profession_manager">Менеджер</string>

    <!-- Developer Strings Start-->
    <string name="developer_sent_name">Имя:</string>
    <string name="developer_sent_phone">Телефон:</string>
    <string name="developer_sent_email">Email:</string>
    <string name="developer_sent_file"><u>Приложить</u></string>
    <string name="developer_download_web">Тестовое задание для Web</string>
    <string name="developer_download_android">Тестовое задание для Android</string>
    <string name="developer_question_skill_answer_yes">Да, у меня есть опыт работы</string>
    <string name="developer_question_skill_answer_no">Нет, хочу на стажировку</string>
    <string name="developer_hint_name">Ваше имя</string>
    <string name="developer_hint_phone">Ваш телефон</string>
    <string name="developer_hint_email">Ваш email</string>
    <string name="developer_hint_comment">Дополнительная информация</string>
    <string name="developer_text_github">Добавить GitHub(ссылка или имя пользователя)</string>
    <string name="developer_hint_github">Ссылка на GitHub</string>
    <string name="developer_send_task">Прикрепить резюме, тестовое задание или примеры кода</string>

    <!-- Web -->
    <string name="developer_language_web_title">Выбери технологии, которыми владеешь:</string>
    <string name="developer_language_web_title_intent">Выбери технологии, которые интересны:</string>
    <!-- Languages -->
    <string name="developer_technology_languages_title">Языки</string>
    <string name="developer_technology_languages_1">PHP</string>
    <string name="developer_technology_languages_2">Java</string>
    <string name="developer_technology_languages_3">Ruby</string>
    <string name="developer_technology_languages_4">Python</string>
    <string name="developer_technology_languages_5">Javascript</string>
    <string name="developer_technology_languages_6">HTML</string>
    <string name="developer_technology_languages_7">CSS</string>
    <!-- SQL -->
    <string name="developer_technology_sql_title">Базы данных</string>
    <string name="developer_technology_sql_1">MySQL</string>
    <string name="developer_technology_sql_2">PostgreSQL</string>
    <string name="developer_technology_sql_3">MSSQL</string>
    <string name="developer_technology_sql_4">MariaDB</string>
    <string name="developer_technology_sql_5">MongoDB</string>
    <string name="developer_technology_sql_6">Redis</string>
    <!-- Frameworks -->
    <string name="developer_technology_framework_title">Фреймворки</string>
    <string name="developer_technology_framework_1">Laravel</string>
    <string name="developer_technology_framework_2">Yii/Yii2</string>
    <string name="developer_technology_framework_3">Symfony</string>
    <string name="developer_technology_framework_4">CodeIgniter</string>
    <string name="developer_technology_framework_5">CakePHP</string>
    <string name="developer_technology_framework_6">Spring</string>
    <string name="developer_technology_framework_7">Ruby on Rails</string>
    <string name="developer_technology_framework_8">Django</string>
    <string name="developer_technology_framework_9">node.js</string>
    <string name="developer_technology_framework_10">jQuery</string>
    <string name="developer_technology_framework_11">AngularJS</string>
    <string name="developer_technology_framework_12">ReactJS</string>
    <string name="developer_technology_framework_13">Vue.js</string>
    <!-- Mobile -->
    <string name="developer_technology_mobile_title">Mobile</string>
    <string name="developer_technology_mobile_1">Java</string>
    <string name="developer_technology_mobile_2">Kotlin2</string>
    <string name="developer_technology_mobile_3">Objective-C</string>
    <string name="developer_technology_mobile_4">Swift</string>
    <string name="developer_technology_mobile_5">React Native</string>
    <string name="developer_technology_mobile_6">Apache Cordova</string>
    <string name="developer_technology_mobile_7">Adobe PhoneGap</string>
    <string name="developer_technology_mobile_8">Ionic</string>
    <string name="developer_technology_mobile_9">Framework 7</string>
    <!-- Developer Strings End-->

    <!-- Manager Strings -->
    <string name="manager_question_skill">Есть ли у тебя опыт работы?</string>
    <string name="manager_question_skill_answer_yes">Да</string>
    <string name="manager_question_skill_answer_no">Нет, хочу на стажировку</string>
    <string name="manager_sent_name">Имя:</string>
    <string name="manager_sent_phone">Телефон:</string>
    <string name="manager_sent_email">Email:</string>
    <string name="manager_sent_comment">Комментарий:</string>
    <string name="manager_hint_question">Почему ты хочешь быть менеджером проектов?</string>
    <string name="manager_sent_file"><u>Приложить</u></string>
    <string name="manager_hint_name">Ваше имя</string>
    <string name="manager_hint_phone">Ваш телефон</string>
    <string name="manager_hint_email">Ваш email</string>
    <string name="manager_hint_comment">Дополнительная информация</string>

    <!-- Profession Strings -->
    <string name="profession_get_resume">Приложить резюме:</string>
    <string name="profession_download_task">Скачать тестовое задание для web/android:</string>
    <string name="profession_send_task_email"><u>Отправить на e-mail</u></string>
    <string name="title_activity_test_questions">TestQuestionsActivity</string>

</resources>
