<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/margin_small"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_default"
        android:text="@string/profession_download_task" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:src="@drawable/ic_download_arrow" />

                <TextView
                    android:id="@+id/text_profession_developer_web_task_link"
                    style="@style/linkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/developer_download_web" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:src="@drawable/ic_download_arrow" />

                <TextView
                    android:id="@+id/text_profession_developer_android_task_link"
                    style="@style/linkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/developer_download_android" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:src="@drawable/ic_send_email" />

                <TextView
                    android:id="@+id/text_profession_developer_web_task_link_email"
                    style="@style/linkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/profession_send_task_email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/image_size_small"
                    android:layout_height="@dimen/image_size_small"
                    android:src="@drawable/ic_send_email" />

                <TextView
                    android:id="@+id/text_profession_developer_android_task_link_email"
                    style="@style/linkStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/profession_send_task_email" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>