<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/actionbar_profession_manager"
        style="@style/ActionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Form with question about skills -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/margin_default">

                <TextView
                    android:id="@+id/text_profession_manager_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    android:text="@string/manager_question_skill"
                    android:textSize="@dimen/text_size_medium" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_profession_manager_question"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:paddingRight="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default">

                    <RadioButton
                        android:id="@+id/radiobutton_profession_manager_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_default"
                        android:paddingRight="@dimen/padding_default"
                        android:text="@string/default_yes" />

                    <RadioButton
                        android:id="@+id/radiobutton_profession_manager_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_default"
                        android:text="@string/manager_question_skill_answer_no" />
                </RadioGroup>
            </RelativeLayout>

            <!-- /Form with question about skills -->
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/view_b"
                android:visibility="visible" />

            <!-- Form with user's callback data -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edit_profession_manager_contacts_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/developer_hint_name"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edit_profession_manager_contacts_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/manager_hint_phone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edit_profession_manager_contacts_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/manager_hint_email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/layout_professions_manager_contacts_invisible"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_default"
                    android:visibility="invisible">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/hint_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/manager_hint_question"
                        android:paddingLeft="@dimen/padding_default"
                        android:paddingRight="@dimen/padding_default"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_profession_manager_contacts_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:inputType="textMultiLine"
                            android:lines="4"
                            android:maxLines="4"
                            android:textSize="@dimen/text_size_small" />

                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_default"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edit_profession_manager_contacts_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/manager_hint_comment"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLines="4" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <!-- /Form with user's callback data -->

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/view_b"
                android:visibility="visible" />

            <!-- Form with user's brief file -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_professions_manager_files_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="@dimen/margin_small">

                    <ImageView
                        android:layout_width="@dimen/image_size_small"
                        android:layout_height="@dimen/image_size_small"
                        android:src="@drawable/ic_paper_clip" />

                    <TextView
                        style="@style/linkStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/default_insert_file" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_profession_manager_files"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_default">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <!-- /Form with user's brief file -->

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@drawable/view_b"
                android:visibility="visible" />

            <!-- Send data button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="vertical">

                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/text_profession_manager_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    android:textColorLink="@android:color/holo_blue_dark" />

                <com.andexert.library.RippleView
                    android:id="@+id/more"
                    rv_centered="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp">

                    <Button
                        android:id="@+id/button_profession_manager_send"
                        style="@style/ButtonColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/padding_default"
                        android:text="@string/default_send" />
                </com.andexert.library.RippleView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>